--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@next/font": "^13.3.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "get-google-fonts": "^1.2.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9",
-
-    "swr": "^2.1.5"
-
+    "swr": "^2.1.5",
+    "uid": "^2.0.2",
+    "uuid": "^9.0.0",
+    "v4": "^0.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
