--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.9",
     "swr": "^2.1.5",
     "uid": "^2.0.2",
